--- a/src/pages/map/map-style.css
+++ b/src/pages/map/map-style.css
@@ -11,3 +11,14 @@
   border-radius: 45px;
   padding: 10px;
 }
+.exit-button {
+  border: none;
+  position: absolute;
+  z-index: 1;
+  top: 5px;
+  left: 2px;
+  border-radius: 15px;
+  width: 100px;
+  height: 20px;
+  background: white;
+}
