--- a/src/pages/map/map-style.css
+++ b/src/pages/map/map-style.css
@@ -22,3 +22,22 @@
   height: 20px;
   background: white;
 }
+.reset-button {
+  border: none;
+  position: absolute;
+  z-index: 1;
+  top: 5px;
+  left: 110px;
+  border-radius: 15px;
+  width: 100px;
+  height: 20px;
+  background: white;
+}
+.map-input {
+  border: none;
+  width: 10vw;
+}
+.map-change-button {
+  border: none;
+  background: white;
+}
